# bandit-infer

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: implementation-plan.md
src/bandit_infer/: __about__.py  __init__.py  __main__.py  api.py  checkpoints.py  cli.py  device.py
src/bandit_infer/_v1/: __init__.py  core.py  maskestim.py  runtime.py  spectral.py  utils.py  wrapper.py
src/bandit_infer/_v2/: __init__.py  bandit.py  inference.py  runtime.py  utils.py
src/bandit_infer/config/: checkpoints.toml
tests/: test_api.py  test_checkpoints.py  test_device_and_package.py
tests/fixtures/: v1-mus64-upstream.npz  v2-multi-upstream.npz
tools/: generate_v1_upstream_fixture.py  generate_v2_upstream_fixture.py  verify_checkpoint_compatibility.py  verify_inference_only.py  verify_v1_upstream_parity.py  verify_v2_upstream_parity.py  verify_wheel.py
